--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "encrypt": "node src/cli.js encryptFile",
     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@deepgram/sdk": "^2.4.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
+    "fluent-ffmpeg": "^2.1.2",
     "mongoose": "^7.5.3",
-    "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
   "engines": {
